--- a/assets/scss/header.scss
+++ b/assets/scss/header.scss
@@ -23,6 +23,7 @@ div#mini-head{
                 display: flex;
                 justify-content: flex-start;
                 .open-nav{
+                    z-index: 1;
                     display: none;
                     position: absolute;
                     top:0;
@@ -162,9 +163,19 @@ div#mini-head{
                                 }
                             }
                         }
+                        @media screen and (min-width:391px) and (max-width:821px) {
+                            width: 320px;
+                            .languages, .currency{
+                                ul{
+                                    display: flex;
+                                    justify-content: space-around;
+                                }
+                            }
+                        }
                     }
                 }
                 .mini-cart-drop{
+                    z-index: 1;
                     display: none;
                     background-color: #ffffff;
                     position: fixed;
@@ -238,6 +249,19 @@ div#mini-head{
                 .cart{
                     width: 40px;
                     height: 40px;
+                    sup{
+                        display: flex;
+                        justify-content: center;
+                        align-items: center;
+                        width: 15px;
+                        height: 15px;
+                        background-color: #EB4D50;
+                        border-radius: 50%;
+                        color: white;
+                        position: relative;
+                        top: -30px;
+                        right: -20px;
+                    }
                 }
             }
         }
