--- a/assets/css/cartStyle.css
+++ b/assets/css/cartStyle.css
@@ -47,15 +47,22 @@ section#cart .container .when-empty .contunie button a {
 section#cart .container .when-empty .contunie button:hover {
   background-color: #eb4d4b;
 }
-section#cart .container .cart-table {
-  display: none;
+section#cart .container .table {
+  padding: 0;
+  height: -moz-max-content;
+  height: max-content;
+  overflow-x: scroll;
   margin-bottom: 50px;
+}
+section#cart .container .table .cart-table {
+  display: none;
+  width: 100%;
   border: solid 0.5px rgb(230, 230, 230);
 }
-section#cart .container .cart-table thead {
+section#cart .container .table .cart-table thead {
   background-color: rgb(245, 245, 245);
 }
-section#cart .container .cart-table thead tr th {
+section#cart .container .table .cart-table thead tr th {
   vertical-align: middle;
   font-size: 13px;
   font-weight: 500;
@@ -63,26 +70,31 @@ section#cart .container .cart-table thead tr th {
   padding: 10px 15px;
   border: solid 0.5px rgb(230, 230, 230);
 }
-section#cart .container .cart-table tbody tr {
+section#cart .container .table .cart-table tbody tr {
   border: solid 0.5px rgb(230, 230, 230);
 }
-section#cart .container .cart-table tbody tr td {
+section#cart .container .table .cart-table tbody tr td {
   vertical-align: middle;
   font-size: 13px;
   font-weight: 500;
   padding: 10px 15px;
   border: solid 0.5px rgb(230, 230, 230);
 }
-section#cart .container .cart-table tbody tr td:first-child {
+section#cart .container .table .cart-table tbody tr td:first-child {
   padding: 10px 0;
   display: flex;
   justify-content: center;
   border: none;
 }
-section#cart .container .cart-table tbody tr td:first-child img {
+section#cart .container .table .cart-table tbody tr td:first-child img {
   border: solid 0.5px rgb(230, 230, 230);
 }
-section#cart .container .cart-table tbody tr td:nth-child(4) input {
+@media screen and (max-width: 391px) {
+  section#cart .container .table .cart-table tbody tr td:first-child img {
+    width: 50px !important;
+  }
+}
+section#cart .container .table .cart-table tbody tr td:nth-child(4) input {
   width: 65px;
   height: 35px;
   border-radius: 0px;
@@ -90,7 +102,7 @@ section#cart .container .cart-table tbody tr td:nth-child(4) input {
   outline: none;
   padding-left: 10px;
 }
-section#cart .container .cart-table tbody tr td:nth-child(4) button {
+section#cart .container .table .cart-table tbody tr td:nth-child(4) button {
   margin: 0;
   width: 40px;
   height: 35px;
@@ -98,20 +110,36 @@ section#cart .container .cart-table tbody tr td:nth-child(4) button {
   background-color: #232323;
   margin-left: -5px;
 }
-section#cart .container .cart-table tbody tr td:nth-child(4) button:hover {
+section#cart .container .table .cart-table tbody tr td:nth-child(4) button:hover {
   background-color: #eb4d4b;
 }
-section#cart .container .cart-table tbody tr td:nth-child(4) button i {
+section#cart .container .table .cart-table tbody tr td:nth-child(4) button i {
   color: white;
 }
-section#cart .container .cart-table tbody tr td:nth-child(4) button:nth-child(2) {
+section#cart .container .table .cart-table tbody tr td:nth-child(4) button:nth-child(2) {
   transition: 0.5s;
 }
-section#cart .container .cart-table tbody tr td:nth-child(4) button:nth-child(3) {
+section#cart .container .table .cart-table tbody tr td:nth-child(4) button:nth-child(3) {
   background-color: #eb4d4b;
 }
-section#cart .container .cart-table tbody tr td:nth-child(4) button:nth-child(3):hover {
+section#cart .container .table .cart-table tbody tr td:nth-child(4) button:nth-child(3):hover {
   background-color: #c12f2d;
+}
+@media screen and (max-width: 391px) {
+  section#cart .container .table .cart-table tbody tr td:nth-child(4) button {
+    width: 35px;
+  }
+}
+@media screen and (max-width: 391px) {
+  section#cart .container .table .cart-table tbody tr td {
+    box-sizing: content-box;
+  }
+}
+@media screen and (max-width: 391px) {
+  section#cart .container .table .cart-table {
+    width: 100%;
+    overflow: scroll;
+  }
 }
 section#cart .container .to-do-next {
   display: none;
@@ -183,6 +211,12 @@ section#cart .container .to-do-next .accordion-total .accordion #step-1 .step-bo
   padding: 8px 14px;
   background-color: #232323;
   color: white;
+}
+@media screen and (max-width: 391px) {
+  section#cart .container .to-do-next .accordion-total .accordion #step-1 .step-bottom .apply button {
+    width: 150px;
+    padding: 0px 10px;
+  }
 }
 section#cart .container .to-do-next .accordion-total .accordion #step-2 .step-bottom .get-quotes div {
   margin-bottom: 20px;
@@ -257,6 +291,12 @@ section#cart .container .to-do-next .accordion-total .accordion #step-3 .step-bo
   background-color: #232323;
   color: white;
 }
+@media screen and (max-width: 391px) {
+  section#cart .container .to-do-next .accordion-total .accordion {
+    width: 100%;
+    margin-bottom: 20px;
+  }
+}
 section#cart .container .to-do-next .accordion-total .total {
   width: 35%;
   height: -moz-max-content;
@@ -283,6 +323,16 @@ section#cart .container .to-do-next .accordion-total .total table tr td:nth-chil
   color: #333;
   font-weight: 400;
   font-size: 13px;
+}
+@media screen and (max-width: 391px) {
+  section#cart .container .to-do-next .accordion-total .total {
+    width: 100%;
+  }
+}
+@media screen and (max-width: 391px) {
+  section#cart .container .to-do-next .accordion-total {
+    flex-direction: column;
+  }
 }
 section#cart .container .to-do-next .buttons {
   margin-top: 40px;
