--- a/assets/scss/cartStyle.scss
+++ b/assets/scss/cartStyle.scss
@@ -45,74 +45,93 @@ section#cart{
                 }
             }
         }
-        .cart-table{
-            display: none;
+        .table{
+            padding: 0;
+            height: max-content;
+            overflow-x: scroll;
             margin-bottom: 50px;
-            border: solid 0.5px rgb(230, 230, 230);
-            thead{
-                background-color: rgb(245, 245, 245);
-                tr{
-                    th{
-                        vertical-align: middle;
-                        font-size: 13px;
-                        font-weight: 500;
-                        letter-spacing: 0.5px;
-                        padding: 10px 15px;
-                        border: solid 0.5px rgb(230, 230, 230);
+            .cart-table{
+                display: none;
+                width: 100%;
+                border: solid 0.5px rgb(230, 230, 230);
+                thead{
+                    background-color: rgb(245, 245, 245);
+                    tr{
+                        th{
+                            vertical-align: middle;
+                            font-size: 13px;
+                            font-weight: 500;
+                            letter-spacing: 0.5px;
+                            padding: 10px 15px;
+                            border: solid 0.5px rgb(230, 230, 230);
+                        }
                     }
                 }
-            }
-            tbody{
-                tr{
-                    border: solid 0.5px rgb(230, 230, 230);  
-                    td{
-                        vertical-align: middle;
-                        font-size: 13px;
-                        font-weight: 500;
-                        padding: 10px 15px;
-                        border: solid 0.5px rgb(230, 230, 230);
-                        &:first-child{
-                            padding: 10px 0;display: flex; justify-content: center; border: none;
-                            img{
-                                border: solid 0.5px rgb(230, 230, 230);
-                            }
-                        }
-                        &:nth-child(4){
-                            input{
-                                width: 65px;
-                                height: 35px;
-                                border-radius: 0px;
-                                border: solid 0.5px rgb(230, 230, 230);
-                                outline: none;
-                                padding-left: 10px;
-                            }
-                            button{
-                                margin: 0;
-                                width: 40px;
-                                height: 35px;
-                                border: none;
-                                background-color: #232323;
-                                margin-left: -5px;
-                                &:hover{
-                                    background-color: #eb4d4b;
-                                }
-                                i{
-                                    color: white;
-                                }
-                                &:nth-child(2){
-                                    transition: 0.5s;
-                                }
-                                &:nth-child(3){
-                                    background-color: #eb4d4b;
-                                    &:hover{
-                                        background-color:#c12f2d;
+                tbody{
+                    tr{
+                        border: solid 0.5px rgb(230, 230, 230);  
+                        td{
+                            vertical-align: middle;
+                            font-size: 13px;
+                            font-weight: 500;
+                            padding: 10px 15px;
+                            border: solid 0.5px rgb(230, 230, 230);
+                            &:first-child{
+                                padding: 10px 0;display: flex; justify-content: center; border: none;
+                                img{
+                                    border: solid 0.5px rgb(230, 230, 230);
+                                    @media screen and (max-width:391px) {
+                                        width: 50px!important;
                                     }
                                 }
                             }
+                            &:nth-child(4){
+                                input{
+                                    width: 65px;
+                                    height: 35px;
+                                    border-radius: 0px;
+                                    border: solid 0.5px rgb(230, 230, 230);
+                                    outline: none;
+                                    padding-left: 10px;
+                                }
+                                button{
+                                    margin: 0;
+                                    width: 40px;
+                                    height: 35px;
+                                    border: none;
+                                    background-color: #232323;
+                                    margin-left: -5px;
+                                    &:hover{
+                                        background-color: #eb4d4b;
+                                    }
+                                    i{
+                                        color: white;
+                                    }
+                                    &:nth-child(2){
+                                        transition: 0.5s;
+                                    }
+                                    &:nth-child(3){
+                                        background-color: #eb4d4b;
+                                        &:hover{
+                                            background-color:#c12f2d;
+                                        }
+                                    }
+                                    @media screen and (max-width:391px) {
+                                        width: 35px;
+                                    }
+                                }
+                            }
+                            @media screen and (max-width:391px) {
+                                box-sizing: content-box;
+                            }
                         }
                     }
                 }
-            } 
+                @media screen and (max-width:391px) {
+                    width: 100%;
+                    overflow: scroll;
+                }
+            }
         }
         .to-do-next{
             display: none;
@@ -169,7 +188,7 @@ section#cart{
                                     &::placeholder{
                                         font-size: 12px;
                                         color: #9c9b9b;
-                                    }                    
+                                    }                   
                                 }
                                 button{
                                     border: 1px solid #232323;    
@@ -178,6 +197,10 @@ section#cart{
                                     padding: 8px 14px;
                                     background-color: #232323;
                                     color: white;
+                                    @media screen and (max-width:391px) {
+                                        width: 150px;
+                                     padding: 0px 10px;
+                                    }
                                 }
                             }
                         }
@@ -257,6 +280,10 @@ section#cart{
                             }
                         }
                     }
+                    @media screen and (max-width:391px) {
+                        width: 100%;
+                        margin-bottom: 20px;
+                    }
                 }
                 .total{
                     width: 35%;
@@ -283,6 +310,12 @@ section#cart{
                             }
                         }
                     }
+                    @media screen and (max-width:391px) {
+                        width: 100%;
+                    }
+                }
+                @media screen and (max-width:391px) {
+                    flex-direction: column;
                 }
             }
             .buttons{
